--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -39,6 +39,7 @@
 	// position: fixed;
 	// z-index: 10;
 	width: 100%;
+	transform: translateZ(0);
 	@include before {
 		top: 0;
 		left: 50%;
@@ -63,7 +64,8 @@
 		margin-left: -15px;
 		margin-right: -15px;
 		&__logo {
-			align-self: center;
+			display: flex;
+			align-items: center;
 			padding: 0 15px;
 			width: 100%;
 			flex: 0 0 25%;
@@ -91,9 +93,13 @@
 			max-width: 25%;
 		}
 	}
+	&-logowrap {
+		min-width: 82px;
+		margin-right: 15px;
+	}
 	&-logo {
 		display: block;
-		margin-bottom: 10px;
+		margin-bottom: 7px;
 		margin-left: 15px;
 		img {
 			height: 49px;
@@ -128,7 +134,7 @@
 		padding-top: 8px;
 	}
 	&-user {
-		margin-left: 15px;
+		margin-left: 13px;
 		padding-top: 5px;
 		&__box {
 			margin-bottom: 5px;
@@ -144,9 +150,12 @@
 			font-size: 0;
 		}
 	}
+	.button-toTop {
+		display: none;
+	}
 }
 
-.header-nav {
+.headerNavSystem {
 	// display: none;
 	position: relative;
 	max-width: 1200px;
