--- a/sass/_header-scroll.scss
+++ b/sass/_header-scroll.scss
@@ -1,14 +1,18 @@
 .header.scroll {
 	position: fixed;
 	z-index: 100;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	padding-top: 5px;
-	padding-bottom: 5px;
+	padding-top: 15px;
+	// padding-bottom: 0px;
+	padding-bottom: 15px;
+	background-color: #fff;
 	transform: translateZ(0);
-
+	opacity: 0;
 	&:before {
 		opacity: 1;
+	}
+
+	& + * {
+		padding-top: 95px;
 	}
 	.header {
 		&-box {
@@ -106,10 +110,14 @@
 		position: relative;
 		&-wrap {
 			position: absolute;
+			z-index: 10;
 			top: 0;
 			left: 0;
 			width: 100%;
 			margin-top: 10px;
+			&:after {
+				right: 140px;
+			}
 
 			
 		}
@@ -120,6 +128,20 @@
 	.button-toTop {
 		display: inline-block;
 	}
+	.button-deploy {
+		display: inline-block;
+	}
+	.breadcrumb {
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		left: 0;
+		padding-left: 15px;
+		padding-right: 15px;
+		width: 100%;
+		background-color: #fff;
+		display: block;
+	}
 }
 .menu.scroll {
 	padding-top: 150px;
@@ -127,132 +149,3 @@
 		display: none;
 	}
 }
-
-// .menu-left.scroll {
-// 	position: fixed;
-// 	z-index: 200;
-// 	top: 0;
-// 	left: 50%;
-// 	width: 100%;
-// 	max-width: 1200px;
-// 	margin-left: -600px;
-// 	margin-top: 10px;
-// 	margin-bottom: 10px;
-// 	padding-top: 5px;
-// 	padding-bottom: 5px;
-// 	background-color: transparent;
-// 	// min-height: 36px;
-// 	.menu {
-// 		&-left {
-// 			&-wrap {
-// 				position: absolute;
-// 				z-index: 300;
-// 				top: 5px;
-// 				left: 120px;
-// 				width: 400px;
-// 				background-color: transparent;
-
-// 			}
-// 			&__list {
-// 				@include clearfix;
-// 			}
-// 			&__box {
-// 				min-height: 22px;
-// 				ul {
-// 					display: block;
-// 				}
-
-// 			}
-// 			&__item {
-// 				width: auto;
-// 				// max-width: 225px;
-// 				&-head {
-// 					display: inline-block;
-// 					background-image: none;
-// 					padding: 0;
-// 					float: left;
-
-// 				}
-// 				&-current {
-// 					display: inline-block;
-// 					padding-left: 10px;
-// 					padding-right: 10px;
-// 					@include hover {
-// 						background-color: transparent;
-// 						color: #797c82;
-// 					}
-// 					span {
-// 						font-size: 12px;
-// 					}
-// 				}
-// 				&.current {
-// 					background-color: #bcbdc0;
-// 					color: #ffffff;
-// 				}
-// 			}
-// 			&-more {
-// 				width: auto;
-// 				&__button {
-// 					padding-top: 5px;
-// 					padding-right: 23px;
-// 					font-size: 12px;
-// 					background-color: #A5A6AA;
-// 					vertical-align: middle;
-// 					min-width: 200px;
-// 					i {
-// 						right: 8px;
-// 					}
-// 				}
-// 				&__box {
-// 					&:first-child, &:last-child {
-// 						.menu-left-more__item {
-// 							border-radius: 0;
-// 						}
-// 					}
-// 				}
-// 				&__list {
-// 					// width: auto;
-// 					margin-left: 0;
-// 					margin-right: 0;
-// 					max-width: 295px;					
-// 				}
-// 				&__item {
-// 					width: 100%;
-// 				}
-// 			}
-
-// 			&-control {
-// 				display: none;
-// 			}
-// 		}
-// 		&-horizontal {
-// 			display: none;
-// 			// &__list {
-// 			// 	height: 0;
-// 			// }
-// 			// &__box {
-// 			// 	position: absolute;
-// 			// 	top: 0;
-// 			// 	min-height: 25px;
-// 			// 	height: 25px;
-				
-// 			// }
-// 			// &__item {
-// 			// 	display: none;
-// 			// 	&.current {
-// 			// 		display: table-cell;
-// 			// 		background-image: none;
-// 			// 		color: $dark-color;
-// 			// 		@include hover {
-// 			// 			background-color: transparent;
-						
-// 			// 		}
-// 			// 	}				
-// 			// }
-// 		}
-// 	}
-// }
-// .collapsing.fix{
-// 	transition: none;
-// 	display: none;
-// }
