--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -36,17 +36,18 @@
 
 
 .header {	
-	// position: fixed;
-	// z-index: 10;
+	z-index: 1000;
 	width: 100%;
 	transform: translateZ(0);
+	background-color: #fff;
 	@include before {
-		top: 0;
+		top: 10px;
+		bottom: 9px;
 		left: 50%;
 		margin-left: (-1170px/2);
 		width: 100%;
 		max-width: 1170px;
-		height: 100%;
+		max-height: 36px;
 		background-color: #F4F5F5;
 		border: 1px solid #DDDEE0;
 		border-radius: 5px;
@@ -153,85 +154,10 @@
 	.button-toTop {
 		display: none;
 	}
-}
-
-.headerNavSystem {
-	// display: none;
-	position: relative;
-	max-width: 1200px;
-	margin-left: -15px;
-	margin-right: -15px;
-	// @include mA();
-
-	&-wrap {
-		position: relative;
-		margin-top: 5px;
-		padding: 5px 15px 4px;
-		background-image: linear-gradient(180deg, #e4e4e4 0%, rgba(212, 212, 212, 0.24) 22%, #ececec 100%);
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e4e4e4', endColorstr='#ececec',GradientType=0 );
-		background-color: #fff;
-		border-radius: 5px;
-		text-align: center;
-		@include after("\e90e") {
-			top: -9px;
-			right: 47px;
-			font-size: 10px;
-			@include icon;
-			color: #e4e4e4;
-		}
+	.button-deploy {
+		display: none;
 	}
-	&__item {
-		color: $thin-color;
-		transition: 0.5s;
-		@include hover {
-			color: $special-color;
-		}
-		i:before {
-			color: inherit;
-			font-size: 19px;
-		}
-	}
-
-	&__link {
-		// display: table-cell;
-		// vertical-align: middle;
-		display: table;
-		min-height: 22px;
-		font-size: 10px;
-		color: inherit;
-		width: 100%;
-		text-align: center;
-		span {
-			display: block;
-			display: table-cell;
-			vertical-align: middle;
-			line-height: 10px;
-			word-break: break-word;
-			
-		}
-	}
-	&-icon-box {
-		// margin-bottom: 2px;
-	}
-	&-button {
-		background-color: transparent;
-		color: #797C82;
-		@include hover {
-			background-color: rgba($dark-color, 0.5);
-			background-color: #FFFFFF;
-			color: #797C82;
-		}
-		&-inn {
-			height: 100%;
-			margin-left: -3px;
-			margin-top: -2px;
-		}
-		i {
-			margin-left: 2px;
-			font-size: 10px;
-			&:before {
-				color: #BCBDC0;
-			}
-		}
+	.breadcrumb {
+		display: none;
 	}
 }
