--- a/sass/general/_deafult.scss
+++ b/sass/general/_deafult.scss
@@ -140,3 +140,50 @@ section, .section {
   background-color: #000;
   opacity: 0.1;
 }
+.breadcrumb {
+  padding: 15px 0;
+  @include clearfix;
+  &-group {
+    float: left;
+  }
+  &__link {
+    color: #bcbdc0;
+    font-size: 12px;
+    font-weight: 300;
+    transition: color 0.4s ease-out;
+    @include hover {
+      color: darken(#bcbdc0, 30);
+    }
+    &:after {
+      content: ' / ';
+      display: inline;
+    }
+    &:last-child {
+      &:after {
+        display: none;
+      }
+    }
+  }
+
+  &-back {
+    text-align: right;
+  }
+}
+.extra-wrapper {
+  position: fixed;
+  z-index: 10000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow-y: scroll;
+  .header, .header.scroll {
+    position: absolute;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    // height: 800px;
+    // overflow-y: scroll;
+    transform: none;
+  }
+}
