--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -36,6 +36,8 @@
 
 
 .header {	
+	position: sticky;
+	top: 0;
 	z-index: 1000;
 	width: 100%;
 	transform: translateZ(0);
@@ -54,9 +56,9 @@
 		transition: 0.4s;
 		opacity: 0;
 	}
-	* {
-		// transition: none;
-	}
+	// & + .content {
+	// 	padding-top: 154px;
+	// }
 	&-box {
 		position: relative;
 		display: flex;
@@ -139,6 +141,7 @@
 		padding-top: 5px;
 		&__box {
 			margin-bottom: 5px;
+			position: relative;
 		}
 		&__name { 
 			
@@ -159,5 +162,17 @@
 	}
 	.breadcrumb {
 		display: none;
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		left: 15px;
+		width: calc(100% - 30px);
+		background-color: #fff;
+	}
+	.rollUp {
+		display: none;
+		&.show {
+			display: block;
+		}
 	}
 }
