--- a/sass/general/_buttons.scss
+++ b/sass/general/_buttons.scss
@@ -91,6 +91,14 @@
 	color: $dark-color;
 	background-color: #fff;
 	font-size: 11px;
+	transition: 0.4s;
+	border: 1px solid rgba($btn-hov-bg-color, 0);
+	border-left: none;
+	border-right: none;
+	@include hover {
+		border-color: rgba($btn-hov-bg-color, 1);
+
+	}
 	i {
 		color: inherit;
 		&:before {
@@ -98,6 +106,25 @@
 		}
 	}
 
+}
+
+.rollUp {
+	position: absolute;
+	top: -15px;
+	right: -15px;
+	color: $btn-bg-color;
+	padding: 0;
+	font-size: 19px;
+	transform: rotate(180deg);
+	@include hover {
+		color: $btn-hov-bg-color;
+	}
+	i {
+		color: inherit;
+		&:before {
+			color: inherit;
+		}
+	}
 }
 
 // пустая кнопка
