--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-comment:before {
+  content: "\e906";
+  color: #797c82;
+}
+
+.icon-like:before {
+  content: "\e911";
+  color: #797c82;
+}
+
 .icon-aircraft:before {
   content: "\e900";
   color: #a1a3a7;
@@ -179,11 +189,6 @@
 .icon-chess:before {
   content: "\e905";
   color: #a1a3a7;
-}
-
-.icon-menu-left-arrowbottom:before {
-  content: "\e906";
-  color: #5e6167;
 }
 
 .icon-list:before {
@@ -235,6 +240,11 @@
 .icon-menu-left-arrowtop:before {
   content: "\e910";
   color: #bcbdc0;
+}
+
+.icon-filters:before {
+  content: "\e912";
+  color: #797c82;
 }
 
 .tooltip {
@@ -626,22 +636,69 @@ body {
   font-weight: 400;
 }
 
-footer {
-  min-height: 3500px;
+.bos {
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+}
+
+.boxs {
+  margin-bottom: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
+  width: 100%;
+  height: 400px;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  background-color: #B6B6B6;
+}
+
+.boxs:nth-child(3n) {
+  background-color: #eee;
+  height: 250px;
+}
+
+.boxs:nth-child(2n) {
+  background-color: #4C4C4C;
+  height: 600px;
+}
+
+.boxs:nth-child(5n) {
+  background-color: #EAEAEA;
 }
 
 img {
   max-width: 100%;
 }
 
-.hide {
+*.hide {
   display: none;
+}
+
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6,
+.section-title,
+.title {
+  margin: 0;
+  padding: 0;
+  font-family: "PT Serif", serif;
+  color: inherit;
+  font-weight: 400;
 }
 
 p,
 .section-text,
 .text {
-  color: #5e6167;
+  color: inherit;
 }
 
 h2 span,
@@ -651,18 +708,12 @@ h2 span,
 
 .section-dark {
   background-color: #000;
-}
-
-.section-dark h2,
-.section-dark h1,
-.section-dark .section-title,
-.section-dark p {
   color: #ffffff;
 }
 
 .overlay {
   position: fixed;
-  z-index: 1;
+  z-index: 11;
   top: 0;
   left: 0;
   width: 100%;
@@ -672,7 +723,7 @@ h2 span,
 }
 
 .breadcrumb {
-  padding: 15px 0;
+  padding: 15px 0 15px;
 }
 
 .breadcrumb::after {
@@ -730,6 +781,10 @@ h2 span,
 
 *.fixed {
   position: fixed;
+}
+
+.tooltip {
+  z-index: 110000;
 }
 
 .link {
@@ -843,6 +898,62 @@ h2 span,
   color: #5e6167;
   background-color: #eeefef;
   border: 1px solid #5e6167;
+}
+
+.upp {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  right: 0;
+}
+
+.button-up {
+  display: none;
+  position: absolute;
+  bottom: 15px;
+  right: 20px;
+  padding-top: 7px;
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+  background-color: #000;
+  opacity: 0.2;
+  width: 28px;
+  height: 28px;
+  min-width: 1px;
+  -webkit-transition: opacity 0.4s;
+  -o-transition: opacity 0.4s;
+  transition: opacity 0.4s;
+  -webkit-border-radius: 3px;
+          border-radius: 3px;
+}
+
+.button-up i {
+  font-size: 15px;
+}
+
+.button-tag {
+  min-width: 60px;
+  padding: 2px 6px 2px;
+  background-color: #bcbdc0;
+  color: #ffffff;
+  font-size: 10px;
+  font-weight: 400;
+}
+
+.button-tag_dark {
+  background-color: #5e6167;
+}
+
+.button-tag-o {
+  color: inherit;
+  border: 1px solid #a5a6aa;
+  background-color: transparent;
+}
+
+.button-tag-o_light {
+  border-color: #ffffff;
+  color: #ffffff;
 }
 
 .form-search__label {
@@ -1063,7 +1174,6 @@ h2 span,
   position: fixed;
   z-index: 100;
   padding-top: 15px;
-  padding-bottom: 15px;
   background-color: #fff;
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
@@ -1231,12 +1341,17 @@ h2 span,
   display: inline-block;
 }
 
-.menu.scroll {
-  padding-top: 150px;
+.header.scroll .breadcrumb {
+  padding-top: 3px;
 }
 
-.menu.scroll .menu-horizontal {
+.header.scroll .menu-horizontal,
+.header.scroll .menu-left {
   display: none;
+}
+
+.menu.scroll {
+  padding-top: 150px;
 }
 
 .user__box {
@@ -1417,7 +1532,6 @@ h2 span,
   padding: 18px 20px 16px;
   margin-right: -10px;
   margin-bottom: 3px;
-  border-bottom: 1px solid #eceae9;
 }
 
 .header-qwestion a {
@@ -1448,23 +1562,24 @@ h2 span,
   font-size: 0;
 }
 
+.header .breadcrumb {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+}
+
+.header .breadcrumb-wrap {
+  position: relative;
+}
+
 .header .button-toTop {
   display: none;
 }
 
 .header .button-deploy {
   display: none;
-}
-
-.header .breadcrumb {
-  display: none;
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 15px;
-  width: -webkit-calc(100% - 30px);
-  width: calc(100% - 30px);
-  background-color: #fff;
 }
 
 .header .rollUp {
@@ -1745,6 +1860,7 @@ h2 span,
   padding-left: 0;
   list-style: none;
   position: absolute;
+  z-index: 100;
   max-width: none;
   padding: 0;
   border: 1px solid #dfdfdf;
@@ -1818,10 +1934,17 @@ h2 span,
 }
 
 .menu-left {
+  position: absolute;
+  width: -webkit-calc(100% - 30px);
+  width: calc(100% - 30px);
   z-index: 10;
   -webkit-border-radius: 5px;
           border-radius: 5px;
   background-color: #f4f5f5;
+}
+
+.menu-left-navigation {
+  padding-top: 15px;
 }
 
 .menu-left-title {
@@ -2091,6 +2214,322 @@ h2 span,
 
 .content {
   padding-top: 15px;
+  height: 100%;
+  min-height: 3500px;
+}
+
+.content-group {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  padding-top: 37px;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.content-title {
+  background-color: #ffffff;
+}
+
+.content-title::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.content-titlebox {
+  float: left;
+}
+
+.content-titlebox h1,
+.content-titlebox h2,
+.content-titlebox h3,
+.content-titlebox h4,
+.content-titlebox h5,
+.content-titlebox p,
+.content-titlebox div,
+.content-titlebox span {
+  margin: 0;
+  padding: 0;
+  font-family: "PT Serif", serif;
+  color: #5e6167;
+  font-weight: 400;
+  font-size: 32px;
+}
+
+.content-filter {
+  text-align: right;
+  font-size: 32px;
+}
+
+.content-filter button {
+  font-size: 16px;
+}
+
+.tag {
+  float: left;
+  color: #a5a6aa;
+}
+
+.tagbox {
+  margin-bottom: 20px;
+}
+
+.tagbox::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.like-card {
+  text-align: right;
+}
+
+.like-button {
+  margin-left: 5px;
+  color: #797c82;
+  font-size: 12px;
+  font-weight: 400;
+  -webkit-transition: color 0.4s ease-out;
+  -o-transition: color 0.4s ease-out;
+  transition: color 0.4s ease-out;
+}
+
+.like-button .icon-comment {
+  display: inline-block;
+  -webkit-transform: translateY(2px);
+      -ms-transform: translateY(2px);
+          transform: translateY(2px);
+  color: inherit;
+}
+
+.like-button i:before {
+  color: inherit;
+}
+
+.like-button_light {
+  color: #ffffff;
+}
+
+.card {
+  padding: 0 15px;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.card-wrap {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  background: #eeefef center no-repeat / cover;
+}
+
+.card-wrap-head {
+  background-color: transparent;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+.card__imgbox {
+  position: relative;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  background: #ffffff center no-repeat/cover;
+  overflow: hidden;
+}
+
+.card-warning-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 6px 15px;
+  background-color: #ee3124;
+  color: #ffffff;
+  font-size: 11px;
+  font-weight: 400;
+}
+
+.card-warning-text p {
+  font-size: 1em;
+}
+
+.card__content {
+  padding: 15px 20px 20px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+}
+
+.card__title {
+  margin-bottom: 15px;
+  font-family: "PT Serif", serif;
+  font-size: 17px;
+}
+
+.card__title h1,
+.card__title h2,
+.card__title h3,
+.card__title h4,
+.card__title h5 {
+  font-size: 1em;
+}
+
+.card-date {
+  margin-top: auto;
+  color: #a1a3a7;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.card-date_light {
+  color: #ffffff;
+}
+
+.cardFull {
+  max-width: 100%;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 100%;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+}
+
+.cardFull-head {
+  background-color: #fff;
+  margin-bottom: 0;
+}
+
+.cardFull__imgbox {
+  min-height: 395px;
+}
+
+.cardFull__title {
+  font-size: 40px;
+  margin-top: -15px;
+  margin-bottom: 5px;
+}
+
+.cardFull__text {
+  margin-bottom: 15px;
+  font-family: "PT Serif", serif;
+  font-size: 17px;
+}
+
+.cardFull_fullHeightImg {
+  color: #ffffff;
+}
+
+.cardFull_fullHeightImg .cardFull__content {
+  margin-top: 355px;
+  padding-top: 55px;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(14%, rgba(0, 0, 0, 0.14)), to(black));
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, black 100%);
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, black 100%);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, black 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
+}
+
+.cardThird {
+  width: 33.333333%;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 33.333333%;
+      -ms-flex: 0 0 33.333333%;
+          flex: 0 0 33.333333%;
+}
+
+.cardThird__imgbox {
+  min-height: 210px;
+}
+
+.cardThird__content {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.cardThird_fullHeightImg {
+  color: #ffffff;
+}
+
+.cardThird_fullHeightImg .cardThird__content {
+  margin-top: 210px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(14%, rgba(0, 0, 0, 0.14)), to(#000000));
+  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+  background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, #000000 100%);
+}
+
+.cardHalf {
+  width: 50%;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 50%;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+}
+
+.cardHalf-imgbox {
+  min-height: 260px;
+  background: no-repeat center / cover;
+}
+
+.cardHalf_fullHeightImg {
+  color: #ffffff;
+}
+
+.cardHalf_fullHeightImg .cardHalf__content {
+  margin-top: 220px;
+  padding-top: 55px;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(14%, rgba(0, 0, 0, 0.14)), to(black));
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, black 100%);
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, black 100%);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, black 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
+}
+
+.cardTwoThirds {
+  width: 66.666667%;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 66.666667%;
+      -ms-flex: 0 0 66.666667%;
+          flex: 0 0 66.666667%;
+}
+
+.cardTwoThirds__imgbox {
+  min-height: 210px;
+}
+
+.cardTwoThirds_fullHeightImg {
+  color: #ffffff;
+}
+
+.cardTwoThirds_fullHeightImg .cardTwoThirds__content {
+  margin-top: 170px;
+  padding-top: 55px;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(14%, rgba(0, 0, 0, 0.14)), to(black));
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, black 100%);
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, black 100%);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.14) 14%, black 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 }
 
 @media screen and (min-width: 1024px) {
@@ -2128,6 +2567,16 @@ h2 span,
     color: #ffffff;
     background-color: #BCBDC0;
     border: 1px solid #ffffff;
+  }
+
+  .button-up:hover {
+    opacity: 0.3;
+    background-color: #000;
+  }
+
+  .button-tag:hover {
+    background: #797c82;
+    color: #ffffff;
   }
 
   .form-checkbox__text:hover {
@@ -2177,6 +2626,14 @@ h2 span,
   .menu-horizontal__item-more:hover {
     color: inherit;
     background-color: inherit;
+  }
+
+  .like-button:hover {
+    color: #2f3033;
+  }
+
+  .like-button_light:hover {
+    color: #b3b3b3;
   }
 }
 
