--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -1,4 +1,79 @@
 .content {
 	padding-top: 15px;
-	
+	height: 100%;
+	min-height: 3500px;
+
+	&-group {
+		display: flex;
+		flex-wrap: wrap;
+		padding-top: 37px;
+		margin-left: -15px;
+		margin-right: -15px;
+	}
+
+	&-title {
+		background-color: $light-color;
+		@include clearfix;
+		&box {
+			float: left;
+			& h1, h2, h3, h4, h5, p, div, span {
+				margin: 0;
+				padding: 0;
+				font-family: "PT Serif", serif;
+				color: $basic-color;
+				font-weight: 400;
+				font-size: 32px;
+			}
+		}
+	}	
+	&-filter {
+		text-align: right;
+		font-size: 32px;
+		button {
+			font-size: 16px;
+		}
+	}
 }
+
+.tag {
+	float: left;
+	color: #a5a6aa;
+	&box {
+		margin-bottom: 20px;
+		@include clearfix;
+	}
+}
+.like {
+	&-card {
+		text-align: right;
+		
+	}
+	&-button {
+		margin-left: 5px;
+		color: $dark-color;
+		font-size: 12px;
+		font-weight: 400;
+		transition: color 0.4s ease-out;
+		.icon-comment {
+			display: inline-block;
+			transform: translateY(2px);
+			color: inherit;
+		}
+		i {
+			&:before {
+				color: inherit;
+			}			
+		}
+		@include hover {
+			color: darken($dark-color, 30);
+		}
+
+		&_light {
+			color: $light-color;
+			@include hover {
+				color: darken($light-color, 30);
+			}
+		}
+	}
+}
+
