--- a/sass/_header-scroll.scss
+++ b/sass/_header-scroll.scss
@@ -3,7 +3,7 @@
 	z-index: 100;
 	padding-top: 15px;
 	// padding-bottom: 0px;
-	padding-bottom: 15px;
+	// padding-bottom: 15px;
 	background-color: #fff;
 	transform: translateZ(0);
 	opacity: 1;
@@ -105,7 +105,6 @@
 	.menuNav-header {
 		display: block;
 	}
-
 	.headerNavSystem {
 		position: relative;
 		&-wrap {
@@ -131,12 +130,15 @@
 	.button-deploy {
 		display: inline-block;
 	}
+	.breadcrumb {
+		padding-top: 3px;
+	}
+	.menu-horizontal, .menu-left {
+		display: none;
+	}
 	
 	
 }
 .menu.scroll {
 	padding-top: 150px;
-	.menu-horizontal {
-		display: none;
-	}
 }
