--- a/sass/_menu-left.scss
+++ b/sass/_menu-left.scss
@@ -1,7 +1,12 @@
 .menu-left {
+	position: absolute;
+	width: calc(100% - 30px);
 	z-index: 10;
 	border-radius: 5px;
 	background-color: #f4f5f5;
+	&-navigation {
+		padding-top: 15px;
+	}
 	&-title {
 		
 		color: $light-color;
