--- a/sass/general/_buttons.scss
+++ b/sass/general/_buttons.scss
@@ -140,3 +140,58 @@
 	}
 }
 
+.upp {
+	position: fixed;
+	width: 100%;
+	bottom: 0;
+	right: 0;
+}
+
+.button-up{
+	display: none;
+	position: absolute;
+	bottom: 15px;
+	right: 20px;
+	padding-top: 7px;
+	transform: rotate(180deg);
+	background-color: #000;
+	opacity: 0.2;
+	width: 28px;
+	height: 28px;
+	min-width: 1px;
+	transition: opacity 0.4s;
+	border-radius: 3px;
+	@include hover {
+		opacity: 0.3;
+		background-color: #000;
+	}
+	i {
+		font-size: 15px;
+
+	}
+}
+
+.button-tag {
+	min-width: 60px;
+	padding: 2px 6px 2px;
+	background-color: #bcbdc0;
+	color: $light-color;
+	font-size: 10px;
+	font-weight: 400;
+	@include hover {
+		background: $btn-active-bg-color;
+		color: $btn-active-color;
+	}
+	&_dark {
+		background-color: $basic-color;
+	}
+	&-o {
+		color: inherit;
+		border: 1px solid #a5a6aa;
+		background-color: transparent;
+		&_light {
+			border-color: $light-color;
+			color: $light-color;
+		}
+	}
+}
