--- a/sass/general/_deafult.scss
+++ b/sass/general/_deafult.scss
@@ -48,15 +48,35 @@ body {
   font-weight: 400;
 }
 
-footer {
-  min-height: 3500px;
+.bos {
+  border-radius: 5px;
+}
+.boxs {
+  margin-bottom: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
+  width: 100%;
+  height: 400px;
+  border-radius: 5px;
+  background-color: #B6B6B6;
+  &:nth-child(3n) {
+    background-color: #eee;
+    height: 250px;
+  }
+  &:nth-child(2n) {
+    background-color: #4C4C4C;
+    height: 600px;
+  }
+  &:nth-child(5n) {
+    background-color: #EAEAEA;
+  }
 }
 
 img{
   max-width: 100%;
 }
 
-.hide {
+*.hide {
   display: none;
 }
 
@@ -69,14 +89,18 @@ h5, .h5,
 h6, .h6,
 .section-title, 
 .title, {
-  // cursor: default;
-  // @include before() {
-    
-  // }
+  margin: 0;
+  padding: 0;
+  font-family: "PT Serif", serif;
+  // color: $basic-color;
+  color: inherit;
+  font-weight: 400;
 }
 
+
 p, .section-text, .text {
-  color: $text-color;
+  color: inherit;
+  // color: $text-color;
   &.text-dark {
     // color: $text-dark-color;
   }
@@ -116,10 +140,10 @@ section, .section {
 
 .section-dark {
   background-color: #000;
+  color: $light-color;
 
 
   h2, h1, .section-title, p {
-    color: $light-color;
   }
 
 
@@ -132,7 +156,7 @@ section, .section {
 .overlay {
   // display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 11;
   top: 0;
   left: 0;
   width: 100%;
@@ -141,7 +165,7 @@ section, .section {
   opacity: 0.1;
 }
 .breadcrumb {
-  padding: 15px 0;
+  padding: 15px 0 15px;
   @include clearfix;
   &-group {
     float: left;
@@ -192,4 +216,7 @@ section, .section {
 }
 *.fixed {
   position: fixed;
+}
+.tooltip {
+  z-index: 110000;
 }
